Changed home buttons to home icon for appropriate pages

--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -37,16 +37,19 @@
 
     </head>
     <body>
-        
+
+
         <div class="login-container lightmode">
-            <div class="col-md-1">
-                <div class= "home-button">
-                    <a href="/"><button class="btn btn-info btn-block btn-facebook" onclick="location.href = '/';"> Home </button></a>
+            <div class="row">
+                <div class="col-sm-1">
+                    <div class= "home-button">
+                        <img src="../../public/img/home.png" width="25px" style="padding-top:5px;" onclick="location.href = '/';"/>
+                    </div>
                 </div>
             </div>
         
             <div class="login-box animated fadeInDown">
-                <div class="login-logo"></div>
+                <div class="login-logo" onclick="location.href = '/';"></div>
                 <div class="login-body">
                     <div class="login-title"><strong>Log In</strong></div>
                     <form class="form-horizontal" method="POST">
