--- a/views/account/forgot.handlebars
+++ b/views/account/forgot.handlebars
@@ -51,11 +51,16 @@
 
 </head>
 <body>
-
 <div class="login-container">
-
+    <div class="row">
+        <div class="col-sm-1">
+            <div class= "home-button">
+                <img src="../../public/img/home.png" width="25px" style="padding-top:5px;" onclick="location.href = '/';"/>
+            </div>
+        </div>
+    </div>
     <div class="login-box animated fadeInDown">
-        <div class="login-logo"></div>
+        <div class="login-logo" onclick="location.href = '/';"></div>
         <div class="login-body">
             <div class="login-title"><strong>Forgot Password?</strong></div>
             <form class="form-horizontal" method="POST">
