--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -36,14 +36,16 @@
     </head>
     <body>
         <div class="login-container lightmode">
-           <div class="col-md-1">
-                <div class= "home-button">
-                    <a href="/"><button class="btn btn-info btn-block btn-facebook" onclick="location.href = '/';"> Home </button></a>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class= "home-button">
+                        <img src="../../public/img/home.png" width="25px" style="padding-top:10px;" onclick="location.href = '/';"/>
+                    </div>
                 </div>
             </div>
         
             <div class="login-box animated fadeInDown">
-                <div class="login-logo">
+                <div class="login-logo" onclick="location.href = '/';">
                 </div>
                 <div class="login-body">
                     <div class="login-title"><strong>Sign-Up</strong> for your account</div>
