--- a/views/viewform.handlebars
+++ b/views/viewform.handlebars
@@ -77,6 +77,9 @@
                     <a href="dashboard_admin"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
                 </li>
                 <li class="active">
+                    <a href="patients_mode"><span class="fa fa-pencil"></span> <span class="xn-text">Patient Mode</span></a>
+                </li>
+                <li class="active">
                     <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
                 </li>
                 <li class="active">
