Removed useless icons such as social networking links. Changed email senders. (Be careful when making an employee) Removed links in patient mode

--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -96,8 +96,8 @@
                         &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
+                        <a href="/">Home</a> |
                         <a href="/about">About</a> |
-                        <a href="#">Privacy</a> |
                         <a href="/contact">Contact Us</a>
                     </div>
                 </div>
