--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -70,7 +70,7 @@
             <!-- START X-NAVIGATION -->
             <ul class="x-navigation">
                 <li class="xn-logo">
-                    <a href="index.html">[Company Name]</a>
+                    <a href="/">[Company Name]</a>
                     <a href="#" class="x-navigation-control"></a>
                 </li>
                 <li class="xn-profile">
