--- a/views/layouts/navigation_employee.handlebars
+++ b/views/layouts/navigation_employee.handlebars
@@ -103,6 +103,8 @@
                 <!-- END X-NAVIGATION VERTICAL -->
 
 		{{{body}}}
+            </div>
+        </div>
         
     <!-- START SCRIPTS -->
         <!-- START PRELOADS -->
