--- a/views/layouts/navigation_peter.handlebars
+++ b/views/layouts/navigation_peter.handlebars
@@ -133,6 +133,9 @@
         <!-- END X-NAVIGATION VERTICAL -->
 		
 		{{{body}}}
+
+    </div>
+</div>
 		
 		<!-- START PRELOADS -->
 <audio id="audio-alert" src="audio/alert.mp3" preload="auto"></audio>
