--- a/views/loginemployee1.handlebars
+++ b/views/loginemployee1.handlebars
@@ -45,8 +45,8 @@
                         &copy; 2014 AppName
                     </div>
                     <div class="pull-right">
+                        <a href="/">Home</a> |
                         <a href="/about">About</a> |
-                        <a href="#">Privacy</a> |
                         <a href="/contact">Contact Us</a>
                     </div>
                 </div>
