--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -48,23 +48,6 @@
                 </div>
                 <!-- ./page logo -->
 
-
-                <!-- search -->
-                <div class="search">
-                    <div class="search-button"><span class="fa fa-search"></span></div>
-                    <div class="search-container animated fadeInDown">
-                        <form action="#" method="post">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search..." />
-                                <div class="input-group-btn">
-                                    <button class="btn btn-primary"><span class="fa fa-search"></span></button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <!-- ./search -->
-
                 <!-- nav mobile bars -->
                 <div class="navigation-toggle">
                     <div class="navigation-toggle-button"><span class="fa fa-bars"></span></div>
@@ -74,7 +57,7 @@
                 <!-- navigation -->
                 <ul class="navigation">
                     <li><a href="/">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact</a></li>
                     {{#if user}}
                         <li><a href="/logout">Log Out</a></li>
@@ -376,17 +359,6 @@
                         &copy; 2016 <a href="#">Jackson 5</a> - All Rights Reserved
                     </div>
                     <!-- ./copyright -->
-
-                    <!-- social links -->
-                    <div class="social-links">
-                        <a href="#"><span class="fa fa-facebook"></span></a>
-                        <a href="#"><span class="fa fa-twitter"></span></a>
-                        <a href="#"><span class="fa fa-google-plus"></span></a>
-                        <a href="#"><span class="fa fa-linkedin"></span></a>
-                        <a href="#"><span class="fa fa-vimeo-square"></span></a>
-                        <a href="#"><span class="fa fa-dribbble"></span></a>
-                    </div>
-                    <!-- ./social links -->
 
                 </div>
                 <!-- ./page footer holder -->
