--- a/views/dashboard_peter.handlebars
+++ b/views/dashboard_peter.handlebars
@@ -88,7 +88,7 @@
 
         <!-- START BREADCRUMB -->
         <ul class="breadcrumb">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li class="active">Dashboard</li>
         </ul>
         <!-- END BREADCRUMB -->
