--- a/views/layouts/navigation_admin.handlebars
+++ b/views/layouts/navigation_admin.handlebars
@@ -101,6 +101,8 @@
             <!-- END X-NAVIGATION VERTICAL -->
 
 			{{{body}}}
+        </div>
+    </div>
 
             <!-- START PRELOADS -->
             <audio id="audio-alert" src="audio/alert.mp3" preload="auto"></audio>
