--- a/views/login_employee.handlebars
+++ b/views/login_employee.handlebars
@@ -77,9 +77,9 @@
                         &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
-                        <a href="#">About</a> |
-                        <a href="#">Privacy</a> |
-                        <a href="#">Contact Us</a>
+                        <a href="/">Home</a> |
+                        <a href="/about">About</a> |
+                        <a href="/contact">Contact Us</a>
                     </div>
                 </div>
             </div>
