--- a/views/patients_mode.handlebars
+++ b/views/patients_mode.handlebars
@@ -43,13 +43,6 @@
     <body>
         
         <div class="login-container lightmode">
-            <div class="row">
-                <div class="col-sm-1">
-                    <div class= "home-button">
-                        <img src="../../public/img/home.png" width="25px" style="padding-top:5px;" onclick="location.href = '/';"/>
-                    </div>
-                </div>
-            </div>
             {{#if msg}}
             <div class="alert alert-success">
                 <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -82,16 +75,19 @@
                     <form class="form-horizontal" method="POST">
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="text" name="name" id="name" class="form-control" placeholder="Your Name"/>
+                            <label for="name" class="col-sm-2 control-label">Name</label>
+                            <input type="text" name="name" id="name" class="form-control" placeholder="YYur Name"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="text" name="number" id="number" class="form-control" placeholder="Your Phone Number in Form +1858123456"/>
+                            <label for="number" class="col-sm-2 control-label">Number</label>
+                            <input type="text" name="number" id="number" class="form-control" placeholder="Your Phone Number in form +1858123456"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
+                            <label for="email" class="col-sm-2 control-label">Email</label>
                             <input type="text" name="email" id="email" class="form-control" placeholder="Your Email"/>
                         </div>
                     </div>
@@ -107,11 +103,6 @@
                 <div class="login-footer">
                     <div class="pull-left">
                         &copy; 2016 Receptional
-                    </div>
-                    <div class="pull-right">
-                        <a href="/about">About</a> |
-                        <a href="#">Privacy</a> |
-                        <a href="/contact">Contact Us</a>
                     </div>
                 </div>
             </div>
