--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -88,8 +88,8 @@
                         &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
+                        <a href="/">Home</a> |
                         <a href="/about">About</a> |
-                        <a href="#">Privacy</a> |
                         <a href="/contact">Contact Us</a>
                     </div>
                 </div>
