--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -75,12 +75,19 @@
                 </li>
                 <li class="xn-profile">
                     <a href="#" class="profile-mini">
-                        <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                        {{#if user.picture}}
+                            <img src={{user.picture}} alt="John Doe"/>
+                        {{else}}
+                            <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                        {{/if}}
                     </a>
                     <div class="profile">
                         <div class="profile-image">
-                            <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
-                        </div>
+                            {{#if user.picture}}
+                                <img src={{user.picture}} alt="John Doe"/>
+                            {{else}}
+                                <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                            {{/if}}                        </div>
                         <div class="profile-data">
                             <div class="profile-data-name">{{user.companyname}}</div>
                             <div class="profile-data-title">Owner</div>
