--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -41,23 +41,31 @@
         <!-- START X-NAVIGATION -->
         <ul class="x-navigation">
             <li class="xn-logo">
-                <a href="index.html">[Company Name]</a>
+                <a href="/">[Company Name]</a>
                 <a href="#" class="x-navigation-control"></a>
             </li>
             <li class="xn-profile">
                 <a href="#" class="profile-mini">
-                    <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                    {{#if user.picture}}
+                        <img src={{user.picture}} alt="John Doe"/>
+                    {{else}}
+                        <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                    {{/if}}
                 </a>
                 <div class="profile">
                     <div class="profile-image">
-                        <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                        {{#if user.picture}}
+                            <img src={{user.picture}} alt="John Doe"/>
+                        {{else}}
+                            <img src="assets/images/users/avatar.jpg" alt="John Doe"/>
+                        {{/if}}
                     </div>
                     <div class="profile-data">
                         {{#if user._admin_id}}
                             <div class="profile-data-name">{{user.name}}</div>
                             <div class="profile-data-title">Employee</div>
                         {{else}}
-                            <div class="profile-data-name">{{user.name}}</div>
+                            <div class="profile-data-name">{{user.companyname}}</div>
                             <div class="profile-data-title">Owner</div>
                         {{/if}}
                     </div>
