--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -67,7 +67,7 @@
                         <div class="col-md-6">
                             <a href="/forgot" class="btn btn-link btn-block">Forgot your password?</a>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-md-offset-2">
                             <button class="btn btn-info btn-block">Log In</button>
                         </div>
                     </div>
