--- a/views/patients_mode.handlebars
+++ b/views/patients_mode.handlebars
@@ -76,7 +76,7 @@
                     <div class="form-group">
                         <div class="col-md-12">
                             <label for="name" class="col-sm-2 control-label">Name</label>
-                            <input type="text" name="name" id="name" class="form-control" placeholder="YYur Name"/>
+                            <input type="text" name="name" id="name" class="form-control" placeholder="Your Name"/>
                         </div>
                     </div>
                     <div class="form-group">
