--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,7 +95,7 @@ a:hover {
   font-size: 1px;
   color: #FFF;
   text-indent: 99999px;
-  background: url("../img/logo-grey.png") left top no-repeat;
+  background: url("../img/logo.svg") left top no-repeat;
   width: 220px;
   height: 50px;
   float: left;
