--- a/views/layouts/navigation_peter.handlebars
+++ b/views/layouts/navigation_peter.handlebars
@@ -23,7 +23,7 @@
         <!-- START X-NAVIGATION -->
         <ul class="x-navigation">
             <li class="xn-logo">
-                <a href="/">[Company Name]</a>
+                <a href=/dashboard_peter>
                 <a href="#" class="x-navigation-control"></a>
             </li>
             <li class="xn-profile">
