--- a/public/css/theme-default.css
+++ b/public/css/theme-default.css
@@ -7352,7 +7352,7 @@ li.ext_zip {
     background-size: 50px 50px;
   }
   .login-container .login-box .login-logo {
-    background-image: url("../img/logo@2x.png");
+    background-image: url("../img/logo-small.svg");
     background-size: 220px 50px;
   }
 }
