--- a/views/layouts/navigation_peter.handlebars
+++ b/views/layouts/navigation_peter.handlebars
@@ -45,10 +45,7 @@
                 <a href="dashboard_peter"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
             </li>
             <li class="active">
-                <a href="index"><span class="fa fa-desktop"></span> <span class="xn-text">[Slack]</span></a>
-            </li>
-            <li class="active">
-                <a href="/settings"><span class="fa fa-desktop"></span> <span class="xn-text">Settings</span></a>
+                <a href="/settings_peter"><span class="fa fa-desktop"></span> <span class="xn-text">Settings</span></a>
             </li>
         </ul>
         <!-- END X-NAVIGATION -->
