--- a/views/layouts/navigation_employee.handlebars
+++ b/views/layouts/navigation_employee.handlebars
@@ -58,24 +58,10 @@
                         <a href="/"><span class="fa fa-dashboard"></span> <span class="xn-text">Overview</span></a>
                     </li>
                     <li class="active">
-                        <a href="patients_mode"><span class="fa fa-pencil"></span> <span class="xn-text">Patient Mode</span></a>
+                        <a href="patients_mode"><span class="fa fa-pencil"></span> <span class="xn-text">Visitor Mode</span></a>
                     </li>
                     <li class="active">
-                        <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Patient Queue</span></a>
-                    </li>
-                    {{#if user.companyname}}
-                        <li class="active">
-                            <a href="add_employees"><span class="fa fa-users"></span> <span class="xn-text">Manage Employees</span></a>
-                        </li>
-                        <li class="active">
-                            <a href="form"><span class="fa fa-pencil"></span> <span class="xn-text">Edit Form</span></a>
-                        </li>
-                        <li class="active">
-                            <a href="viewform"><span class="fa fa-pencil"></span> <span class="xn-text">View Form</span></a>
-                        </li>
-                    {{/if}}
-                    <li class="active">
-                        <a href="#"><span class="fa fa-comments-o"></span> <span class="xn-text">[Slack]</span></a>
+                        <a href="patient_queue"><span class="fa fa-clock-o"></span> <span class="xn-text">Visitor Queue</span></a>
                     </li>
                     <li class="active">
                         <a href="settings"><span class="fa fa-cogs"></span> <span class="xn-text">Settings</span></a>
