--- a/views/patients_mode.handlebars
+++ b/views/patients_mode.handlebars
@@ -76,19 +76,19 @@
                     <div class="form-group">
                         <div class="col-md-12">
                             <label for="name" class="col-sm-2 control-label">Name</label>
-                            <input type="text" name="name" id="name" class="form-control" placeholder="Your Name"/>
+                            <input type="text" name="name" id="name" value="Submit" class="form-control" placeholder="Your Name"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
                             <label for="number" class="col-sm-2 control-label">Number</label>
-                            <input type="text" name="number" id="number" class="form-control" placeholder="Your Phone Number in form +1858123456"/>
+                            <input type="text" name="number" id="number" value="Submit" class="form-control" placeholder="Your Phone Number in form +1858123456"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
                             <label for="email" class="col-sm-2 control-label">Email</label>
-                            <input type="text" name="email" id="email" class="form-control" placeholder="Your Email"/>
+                            <input type="text" name="email" id="email" value="Submit" class="form-control" placeholder="Your Email"/>
                         </div>
                     </div>
                     <div class="form-group">
@@ -99,6 +99,20 @@
                     </form>
                 </div>
 
+                <script src="/socket.io/socket.io.js"></script>
+                <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+                <script>
+                    var socket = io();
+                    $('form').submit(function(){
+                        socket.emit('name', $('#name').val());
+                        $('#name').val('');
+                        socket.emit('number', $('#number').val());
+                        $('#number').val('');
+                        socket.emit('email', $('#email').val());
+                        $('#email').val('');
+                        return false;
+                    });
+                </script>
 
                 <div class="login-footer">
                     <div class="pull-left">
