--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -149,16 +149,26 @@
                             </div>
                         </div>
 
-                    </div>
-                    <div class="row">
-
                         <div class="col-md-3 col-sm-3 col-xs-3">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user2.jpg" alt="John Doe" class="img-circle">
                                 </div>
                                 <h5>Martin Nguyen</h5>
-                                <div class="text-column-subtitle">Front-end Lead</div>
+                                <div class="text-column-subtitle">Team Leader</div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user11.jpg" alt="Dmitry Ivaniuk" class="img-circle">
+                                </div>
+                                <h5>Royal Hien</h5>
+                                <div class="text-column-subtitle">Lead Back-End Engineer</div>
                             </div>
                         </div>
 
@@ -244,17 +254,7 @@
                                     <img src="assets/img/users/user10.jpg" alt="John Doe" class="img-circle">
                                 </div>
                                 <h5>Harvey Yu</h5>
-                                <div class="text-column-subtitle">Pokemon Master</div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
-                                <div class="text-column-image">
-                                    <img src="assets/img/users/user11.jpg" alt="Dmitry Ivaniuk" class="img-circle">
-                                </div>
-                                <h5>Royal Hien</h5>
-                                <div class="text-column-subtitle">Security Expert</div>
+                                <div class="text-column-subtitle">Back-End Engineer</div>
                             </div>
                         </div>
 
@@ -264,7 +264,7 @@
                                     <img src="assets/img/users/user12.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
                                 <h5>Wingo Zhai</h5>
-                                <div class="text-column-subtitle">Public Relations</div>
+                                <div class="text-column-subtitle">Back-End Engineer</div>
                             </div>
                         </div>
 
