--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -139,7 +139,7 @@
 
                     <div class="row">
 
-                        <div class="col-md-3 col-sm-3 col-xs-3" style="float: none; margin: 0 auto;">
+                        <div class="col-md-6">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn" >
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user.jpg" alt="John Doe" class="img-circle">
@@ -149,7 +149,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 col-sm-3 col-xs-3">
+                        <div class="col-md-6">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user2.jpg" alt="John Doe" class="img-circle">
@@ -248,7 +248,7 @@
                     </div>
                     <div class="row">
 
-                        <div class="col-md-3 col-sm-3 col-xs-3">
+                        <div class="col-sm-4">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user10.jpg" alt="John Doe" class="img-circle">
@@ -258,7 +258,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 col-sm-3 col-xs-3">
+                        <div class="col-sm-4">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user12.jpg" alt="Nadia Ali" class="img-circle">
@@ -268,7 +268,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 col-sm-3 col-xs-3">
+                        <div class="col-sm-4">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user13.jpg" alt="Brad Pitt" class="img-circle">
