--- a/views/layouts/navigation_peter.handlebars
+++ b/views/layouts/navigation_peter.handlebars
@@ -96,9 +96,9 @@
                     <div class="widget widget-default widget-carousel">
                         <div class="owl-carousel" id="owl-example">
                             <div>
-                                <div class="widget-title">Total Visitors</div>
-                                <div class="widget-subtitle">27/08/2014 15:23</div>
-                                <div class="widget-int">3,548</div>
+                                <div class="widget-title">Total Patients</div>
+                                <div class="widget-subtitle">03/17/2016 19:23</div>
+                                <div class="widget-int">{{{analyticData.patient_count}}}</div>
                             </div>
                             <div>
                                 <div class="widget-title">Returned</div>
@@ -140,13 +140,13 @@
                 <div class="col-md-3">
 
                     <!-- START WIDGET REGISTRED -->
-                    <div class="widget widget-default widget-item-icon" onclick="location.href='pages-address-book.html';">
+                    <div class="widget widget-default widget-item-icon">
                         <div class="widget-item-left">
                             <span class="fa fa-user"></span>
                         </div>
                         <div class="widget-data">
-                            <div class="widget-int num-count">375</div>
-                            <div class="widget-title">Registred users</div>
+                            <div class="widget-int num-count">{{{analyticData.count}}}</div>
+                            <div class="widget-title">Registered Businesses</div>
                             <div class="widget-subtitle">On your website</div>
                         </div>
                         <div class="widget-controls">
@@ -190,8 +190,8 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="panel-title-box">
-                                <h3>Sales</h3>
-                                <span>Sales activity by period you selected</span>
+                                <h3>Website Load Times</h3>
+                                <span>View the respond times for your website</span>
                             </div>
                             <ul class="panel-controls panel-controls-title">
                                 <li>
@@ -204,42 +204,7 @@
 
                         </div>
                         <div class="panel-body">
-                            <div class="row stacked">
-                                <div class="col-md-4">
-                                    <div class="progress-list">
-                                        <div class="pull-left"><strong>In Queue</strong></div>
-                                        <div class="pull-right">75%</div>
-                                        <div class="progress progress-small progress-striped active">
-                                            <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">75%</div>
-                                        </div>
-                                    </div>
-                                    <div class="progress-list">
-                                        <div class="pull-left"><strong>Shipped Products</strong></div>
-                                        <div class="pull-right">450/500</div>
-                                        <div class="progress progress-small progress-striped active">
-                                            <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">90%</div>
-                                        </div>
-                                    </div>
-                                    <div class="progress-list">
-                                        <div class="pull-left"><strong class="text-danger">Returned Products</strong></div>
-                                        <div class="pull-right">25/500</div>
-                                        <div class="progress progress-small progress-striped active">
-                                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 5%;">5%</div>
-                                        </div>
-                                    </div>
-                                    <div class="progress-list">
-                                        <div class="pull-left"><strong class="text-warning">Progress Today</strong></div>
-                                        <div class="pull-right">75/150</div>
-                                        <div class="progress progress-small progress-striped active">
-                                            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
-                                        </div>
-                                    </div>
-                                    <p><span class="fa fa-warning"></span> Data update in end of each hour. You can update it manual by pressign update button</p>
-                                </div>
-                                <div class="col-md-8">
-                                    <div id="dashboard-map-seles" style="width: 100%; height: 200px"></div>
-                                </div>
-                            </div>
+                            <iframe id="newrelic_frame" src="https://rpm.newrelic.com/public/charts/9WRz3BkdpQw" width="750" height="300" scrolling="yes" frameborder="no"></iframe>
                         </div>
                     </div>
                     <!-- END SALES BLOCK -->
@@ -251,8 +216,8 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="panel-title-box">
-                                <h3>Projects</h3>
-                                <span>Projects activity</span>
+                                <h3>New Businesses</h3>
+                                <span>Signup activity</span>
                             </div>
                             <ul class="panel-controls" style="margin-top: 2px;">
                                 <li><a href="#" class="panel-fullscreen"><span class="fa fa-expand"></span></a></li>
@@ -272,65 +237,36 @@
                                 <table class="table table-bordered table-striped">
                                     <thead>
                                     <tr>
-                                        <th width="50%">Project</th>
-                                        <th width="20%">Status</th>
-                                        <th width="30%">Activity</th>
+                                        <th width="30%">Company</th>
+                                        <th width="60%">Email</th>
+                                        <th width="10%">Plan</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td><strong>Atlant</strong></td>
-                                        <td><span class="label label-danger">Developing</span></td>
-                                        <td>
-                                            <div class="progress progress-small progress-striped active">
-                                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">85%</div>
-                                            </div>
-                                        </td>
+                                        <td><strong>{{{analyticData.recentSignups.0.companyname}}}</strong></td>
+                                        <td><strong>{{{analyticData.recentSignups.0.email}}}</strong></td>
+                                        <td><span class="label label-success">{{{analyticData.recentSignups.0.pricingplan}}}</span></td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Gemini</strong></td>
-                                        <td><span class="label label-warning">Updating</span></td>
-                                        <td>
-                                            <div class="progress progress-small progress-striped active">
-                                                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">40%</div>
-                                            </div>
-                                        </td>
+                                        <td><strong>{{{analyticData.recentSignups.1.companyname}}}</strong></td>
+                                        <td><strong>{{{analyticData.recentSignups.1.email}}}</strong></td>
+                                        <td><span class="label label-success">{{{analyticData.recentSignups.1.pricingplan}}}</span></td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Taurus</strong></td>
-                                        <td><span class="label label-warning">Updating</span></td>
-                                        <td>
-                                            <div class="progress progress-small progress-striped active">
-                                                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 72%;">72%</div>
-                                            </div>
-                                        </td>
+                                        <td><strong>{{{analyticData.recentSignups.2.companyname}}}</strong></td>
+                                        <td><strong>{{{analyticData.recentSignups.2.email}}}</strong></td>
+                                        <td><span class="label label-success">{{{analyticData.recentSignups.2.pricingplan}}}</span></td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Leo</strong></td>
-                                        <td><span class="label label-success">Support</span></td>
-                                        <td>
-                                            <div class="progress progress-small progress-striped active">
-                                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">100%</div>
-                                            </div>
-                                        </td>
+                                        <td><strong>{{{analyticData.recentSignups.3.companyname}}}</strong></td>
+                                        <td><strong>{{{analyticData.recentSignups.3.email}}}</strong></td>
+                                        <td><span class="label label-success">{{{analyticData.recentSignups.3.pricingplan}}}</span></td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Virgo</strong></td>
-                                        <td><span class="label label-success">Support</span></td>
-                                        <td>
-                                            <div class="progress progress-small progress-striped active">
-                                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">100%</div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Aquarius</strong></td>
-                                        <td><span class="label label-success">Support</span></td>
-                                        <td>
-                                            <div class="progress progress-small progress-striped active">
-                                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">100%</div>
-                                            </div>
-                                        </td>
+                                        <td><strong>{{{analyticData.recentSignups.4.companyname}}}</strong></td>
+                                        <td><strong>{{{analyticData.recentSignups.4.email}}}</strong></td>
+                                        <td><span class="label label-success">{{{analyticData.recentSignups.4.pricingplan}}}</span></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -443,6 +379,13 @@
         <!-- END PAGE CONTENT WRAPPER -->
 		{{{body}}}
 
+        <script>
+            window.onload = function(){
+                var iframe = document.getElementById('newrelic_frame');
+                iframe.src = iframe.src;
+
+            }
+        </script>
     </div>
 </div>
 
