--- a/views/layouts/navigation_peter.handlebars
+++ b/views/layouts/navigation_peter.handlebars
@@ -190,8 +190,8 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="panel-title-box">
-                                <h3>Website Load Times</h3>
-                                <span>View the respond times for your website</span>
+                                <h3>Website Throughput</h3>
+                                <span>View the traffic visiting your website</span>
                             </div>
                             <ul class="panel-controls panel-controls-title">
                                 <li>
